# events-face

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
src/: urls.py
src/auth/: __init__.py  serializer.py  services.py  urls.py  views.py
src/core/: asgi.py  settings.py  wsgi.py
src/events/: admin.py  paginators.py  urls.py
src/events/migrations/: 0001_initial.py  0002_alter_eventmodel_options_and_more.py  0003_rename_date_eventmodel_event_time_and_more.py
src/events/models/: __init__.py  event.py  event_place.py
src/events/repositories/: __init__.py  event_repository.py
src/events/serializers/: __init__.py  event_serializer.py
src/events/services/: __init__.py  event_service.py
src/events/views/: __init__.py  views.py
src/sync/: admin.py  apps.py
src/sync/management/commands/: sync_events.py
src/sync/migrations/: 0001_initial.py
src/sync/models/: __init__.py  synclog.py
src/sync/services/: __init__.py  event_sync_service.py
src/users/: __init__.py  views.py
